termine el maquetado de la pagina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
-    <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon" />
     <!--  FONT-AWESOME -->
     <link
       rel="stylesheet"
@@ -28,23 +28,27 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body >
     <header id="header">
       <img src="./assets/logo.jpg" alt="Logo" class="logo" />
       <nav class="navbar">
         <label for="menu-toggle" class="menu-label">
           <img src="./assets/menu.png" alt="" class="menu-icon" />
         </label>
-      <input type="checkbox" id="menu-toggle" />
+        <input type="checkbox" id="menu-toggle" />
 
         <ul class="navbar-list">
-           <div class="searchContainer">
+          <div class="searchContainer">
             <form action="">
-              <input id="search" type="search"... placeholder="buscar">
+              <input id="search" type="search" ... placeholder="buscar" />
               <button><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
-           </div>
-          <di id="iniciarSesion"><a href="./pages/login.html" id="iniciarSesion">Iniciar Sesión</a></di>
+          </div>
+          <di id="iniciarSesion"
+            ><a href="./pages/login.html" id="iniciarSesion"
+              >Iniciar Sesión</a
+            ></di
+          >
           <li><a href="./pages/sobreNosotros.html">Nosotros</a></li>
           <li><a href="#contactanos">Contactanos</a></li>
         </ul>
@@ -110,7 +114,9 @@
             <p>Total:</p>
             <span>$30000</span>
           </div>
-          <button class="btn-add"><a href="./pages/404.html">COMPRAR</a></button>
+          <button class="btn-add">
+            <a href="./pages/404.html">COMPRAR</a>
+          </button>
         </div>
         <!-- AGREGAMOS UN DIV VACIO DE CLASE OVERLAY PARA EFECTO GLASS AL ABRIR MENU HAMBURGUESA Y CARRITO -->
         <div class="overlay"></div>
@@ -220,16 +226,14 @@
           <div class="card text-center">
             <div class="card-IMG">
               <img
-                src="https://www.espaciovino.com.ar/media/default/0001/64/thumb_63492_default_small.jpeg"
+                src="https://www.espaciovino.com.ar/media/default/0001/67/thumb_66473_default_big.jpeg"
                 class="card-img-top"
                 alt="image"
               />
             </div>
             <div class="card-body">
-              <h5 class="card-title">
-                Navarro Correas Colección Privada Malbec
-              </h5>
-              <p class="card-text">$4000</p>
+              <h5 class="card-title">Mastroeni Chenin Blanc Dulce Natural</h5>
+              <p class="card-text">$4.030</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -238,18 +242,18 @@
           <div class="card text-center">
             <div class="card-IMG">
               <img
-                src="https://www.espaciovino.com.ar/media/default/0001/70/thumb_69926_default_big.jpeg"
+                src="https://http2.mlstatic.com/D_NQ_NP_860995-MLU75051137870_032024-O.webp"
                 class="card-img-top"
                 alt="image"
               />
             </div>
             <div class="card-body">
               <h5 class="card-title">
-                Altos Las Hormigas Clásico Malbec Orgánico
+                Johnnie Walker blue label 750cc con estuche
               </h5>
-              <p class="card-text">$4500</p>
+              <p class="card-text">$40.000</p>
               <div class="card_buttom">
-                <a href="./pages/detalleDeProducto.html">Ver</a>
+                <a href="./pages/detalleDeProductoDOS.html">Ver</a>
               </div>
             </div>
           </div>
@@ -263,9 +267,9 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Putruele Tardío de Abril Rosado</h5>
-              <p class="card-text">$2000</p>
+              <p class="card-text">$2.000</p>
               <div class="card_buttom">
-                <a href="./pages/detalleDeProducto.html">Ver</a>
+                <a href="./pages/detalleDeProductoDOS.html">Ver</a>
               </div>
             </div>
           </div>
@@ -281,7 +285,7 @@
               <h5 class="card-title">
                 Tres Plumas Dulce de Leche Licor 700 ml
               </h5>
-              <p class="card-text">$3000</p>
+              <p class="card-text">$3.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -337,7 +341,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Johnnie Walker Red Label Whisky 750 ml</h5>
-              <p class="card-text">$4000</p>
+              <p class="card-text">$4.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -355,7 +359,7 @@
               <h5 class="card-title">
                 Johnnie Walker Gold Label Reserve Whisky 750 ml
               </h5>
-              <p class="card-text">$4500</p>
+              <p class="card-text">$4.500</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -371,7 +375,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Johnnie Walker Swing Whisky 750 ml</h5>
-              <p class="card-text">$2000</p>
+              <p class="card-text">$2.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -387,7 +391,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Jameson Black Barrel Whiskey 750 ml</h5>
-              <p class="card-text">$3000</p>
+              <p class="card-text">$3.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -419,7 +423,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Beagle Cream Stout Cerveza 330 ml</h5>
-              <p class="card-text">$1200</p>
+              <p class="card-text">$1.200</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -435,7 +439,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Schofferhofer Kristall Cerveza 500 ml</h5>
-              <p class="card-text">$1000</p>
+              <p class="card-text">$1.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -471,7 +475,7 @@
               <h5 class="card-title">
                 Kostritzer Schwarzbier Cerveza Lata 500 ml
               </h5>
-              <p class="card-text">$2000</p>
+              <p class="card-text">$2.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -487,7 +491,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Cape Horn Pale Ale Cerveza 500 ml</h5>
-              <p class="card-text">$1000</p>
+              <p class="card-text">$1.000</p>
               <div class="card_buttom">
                 <a href="./pages/detalleDeProducto.html">Ver</a>
               </div>
@@ -583,7 +587,7 @@
       </section>
       >
       <!-- contactar -->
-       <section id="contactanos">
+      <section id="contactanos">
         <div class="container">
           <div class="row">
             <div class="col p-3">
@@ -607,7 +611,12 @@
                 </div>
                 <div class="mb-3">
                   <label for="nombre" class="form-label fw-bold">Nombre</label>
-                  <input type="text" class="form-control" id="nombre" placeholder="Ej: Cosme Fulanito" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nombre"
+                    placeholder="Ej: Cosme Fulanito"
+                  />
                 </div>
                 <div class="mb-3">
                   <label for="mensaje" class="form-label fw-bold"
@@ -638,7 +647,7 @@
             </div>
           </div>
         </div>
-       </section>
+      </section>
     </main>
     <footer class="footer-section">
       <div class="container">
@@ -667,7 +676,7 @@
                 <i class="far fa-envelope-open"></i>
                 <div class="cta-text">
                   <h4>Mail</h4>
-                  <span>laCopaDelRey@info.com</span>
+                  <span>CopaDelRey@info.com</span>
                 </div>
               </div>
             </div>
@@ -692,9 +701,15 @@
                 </div>
                 <div class="footer-social-icon">
                   <span>Siguenos en nuetras redes</span>
-                  <a href="./pages/404.html"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                  <a href="./pages/404.html"><i class="fab fa-twitter twitter-bg"></i></a>
-                  <a href="./pages/404.html"><i class="fab fa-google-plus-g google-bg"></i></a>
+                  <a href="./pages/404.html"
+                    ><i class="fab fa-facebook-f facebook-bg"></i
+                  ></a>
+                  <a href="./pages/404.html"
+                    ><i class="fab fa-twitter twitter-bg"></i
+                  ></a>
+                  <a href="./pages/404.html"
+                    ><i class="fab fa-google-plus-g google-bg"></i
+                  ></a>
                 </div>
               </div>
             </div>
@@ -706,7 +721,9 @@
                 <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="./pages/contactos.html">Contactanos</a></li>
-                  <li><a href="./pages/sobreNosotros.html">Sobre Nosotros</a></li>
+                  <li>
+                    <a href="./pages/sobreNosotros.html">Sobre Nosotros</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -749,7 +766,7 @@
               <div class="footer-menu">
                 <ul>
                   <li><a href="#">Home</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#contactanos">Contact</a></li>
                   <li><a href="#">Sobre nosotros</a></li>
                 </ul>
               </div>
@@ -765,5 +782,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+   
   </body>
 </html>
