termine el boton de detalle de producto

--- a/pages/detalleDeProductoDOS.html
+++ b/pages/detalleDeProductoDOS.html
@@ -52,7 +52,7 @@
           <li><a href="../pages/sobreNosotros.html">Nosotros</a></li>
           <li><a href="../pages/contactos.html">Contactanos</a></li>
         </ul>
-        <!--  FONT-AWESOME -->
+
         <label for="cart-toggle" class="cart-label">
           <!-- <img src="./assets/img/cart-icon.svg" alt="Carrito de compras" class="cart-icon" />
          -->
@@ -70,7 +70,7 @@
             />
             <div class="item-info">
               <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <span class="item-price">$10.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -80,12 +80,14 @@
           </div>
           <div class="cart-item">
             <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
+              src="https://http2.mlstatic.com/D_NQ_NP_860995-MLU75051137870_032024-O.webp"
               alt="img"
             />
             <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <h3 class="item-title">
+                Johnnie Walker blue label 750cc con estuche
+              </h3>
+              <span class="item-price">$40.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -95,12 +97,12 @@
           </div>
           <div class="cart-item">
             <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
+              src="https://www.espaciovino.com.ar/media/default/0001/65/thumb_64630_default_big.jpeg"
               alt="img"
             />
             <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <h3 class="item-title">Putruele Tardío de Abril Rosado</h3>
+              <span class="item-price">$2.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -112,7 +114,7 @@
 
           <div class="cart-total">
             <p>Total:</p>
-            <span>$30000</span>
+            <span>$52.000</span>
           </div>
           <button class="btn-add">
             <a href="./pages/404.html">COMPRAR</a>
