--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -53,7 +53,7 @@
           >
           <li><a href="../pages/sobreNosotros.html">Nosotros</a></li>
         </ul>
-        <!-- /*REEMPLAZAMOS LA IMAGEN POR EL ICONO DE FONT-AWESOME*/ -->
+       
         <label for="cart-toggle" class="cart-label">
           <!-- <img src="./assets/img/cart-icon.svg" alt="Carrito de compras" class="cart-icon" />
            -->
@@ -62,64 +62,64 @@
 
         <input type="checkbox" id="cart-toggle" />
         <div class="cart">
-          <h2>Tus Compras:</h2>
-
-          <div class="cart-item">
-            <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
-              alt="img"
-            />
-            <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+            <h2>Tus Compras:</h2>
+  
+            <div class="cart-item">
+              <img
+                src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
+                alt="img"
+              />
+              <div class="item-info">
+                <h3 class="item-title">Vino The Party Malbec</h3>
+                <span class="item-price">$10.000</span>
+              </div>
+              <div class="item-handler">
+                <span class="quantity-handler down">-</span>
+                <span class="item-quantity">1</span>
+                <span class="quantity-handler up">+</span>
+              </div>
             </div>
-            <div class="item-handler">
-              <span class="quantity-handler down">-</span>
-              <span class="item-quantity">1</span>
-              <span class="quantity-handler up">+</span>
+            <div class="cart-item">
+              <img
+                src="https://http2.mlstatic.com/D_NQ_NP_860995-MLU75051137870_032024-O.webp"
+                alt="img"
+              />
+              <div class="item-info">
+                <h3 class="item-title">Johnnie Walker blue label 750cc con estuche</h3>
+                <span class="item-price">$40.000</span>
+              </div>
+              <div class="item-handler">
+                <span class="quantity-handler down">-</span>
+                <span class="item-quantity">1</span>
+                <span class="quantity-handler up">+</span>
+              </div>
             </div>
+            <div class="cart-item">
+              <img
+                src="https://www.espaciovino.com.ar/media/default/0001/65/thumb_64630_default_big.jpeg"
+                alt="img"
+              />
+              <div class="item-info">
+                <h3 class="item-title">Putruele Tardío de Abril Rosado</h3>
+                <span class="item-price">$2.000</span>
+              </div>
+              <div class="item-handler">
+                <span class="quantity-handler down">-</span>
+                <span class="item-quantity">1</span>
+                <span class="quantity-handler up">+</span>
+              </div>
+            </div>
+            <span class="divider"></span>
+  
+            <div class="cart-total">
+              <p>Total:</p>
+              <span>$52.000</span>
+            </div>
+            <button class="btn-add">
+              <a href="./pages/404.html">COMPRAR</a>
+            </button>
           </div>
-          <div class="cart-item">
-            <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
-              alt="img"
-            />
-            <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
-            </div>
-            <div class="item-handler">
-              <span class="quantity-handler down">-</span>
-              <span class="item-quantity">1</span>
-              <span class="quantity-handler up">+</span>
-            </div>
-          </div>
-          <div class="cart-item">
-            <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
-              alt="img"
-            />
-            <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
-            </div>
-            <div class="item-handler">
-              <span class="quantity-handler down">-</span>
-              <span class="item-quantity">1</span>
-              <span class="quantity-handler up">+</span>
-            </div>
-          </div>
-          <span class="divider"></span>
-
-          <div class="cart-total">
-            <p>Total:</p>
-            <span>$30000</span>
-          </div>
-          <button class="btn-add">
-            <a href="./pages/404.html">COMPRAR</a>
-          </button>
-        </div>
-        <!-- AGREGAMOS UN DIV VACIO DE CLASE OVERLAY PARA EFECTO GLASS AL ABRIR MENU HAMBURGUESA Y CARRITO -->
+       
         <div class="overlay"></div>
       </nav>
     </header>
