--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -51,7 +51,7 @@
           </div>
           <li><a href="../pages/contactos.html">Contactanos</a></li>
         </ul>
-        <!-- /*REEMPLAZAMOS LA IMAGEN POR EL ICONO DE FONT-AWESOME*/ -->
+
         <label for="cart-toggle" class="cart-label">
           <!-- <img src="./assets/img/cart-icon.svg" alt="Carrito de compras" class="cart-icon" />
          -->
@@ -69,7 +69,7 @@
             />
             <div class="item-info">
               <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <span class="item-price">$10.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -79,12 +79,14 @@
           </div>
           <div class="cart-item">
             <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
+              src="https://http2.mlstatic.com/D_NQ_NP_860995-MLU75051137870_032024-O.webp"
               alt="img"
             />
             <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <h3 class="item-title">
+                Johnnie Walker blue label 750cc con estuche
+              </h3>
+              <span class="item-price">$40.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -94,12 +96,12 @@
           </div>
           <div class="cart-item">
             <img
-              src="https://http2.mlstatic.com/D_Q_NP_840616-MLA76975790361_062024-AC.webp"
+              src="https://www.espaciovino.com.ar/media/default/0001/65/thumb_64630_default_big.jpeg"
               alt="img"
             />
             <div class="item-info">
-              <h3 class="item-title">Vino The Party Malbec</h3>
-              <span class="item-price">$10000</span>
+              <h3 class="item-title">Putruele Tardío de Abril Rosado</h3>
+              <span class="item-price">$2.000</span>
             </div>
             <div class="item-handler">
               <span class="quantity-handler down">-</span>
@@ -111,13 +113,13 @@
 
           <div class="cart-total">
             <p>Total:</p>
-            <span>$30000</span>
+            <span>$52.000</span>
           </div>
           <button class="btn-add">
             <a href="./pages/404.html">COMPRAR</a>
           </button>
         </div>
-        <!-- AGREGAMOS UN DIV VACIO DE CLASE OVERLAY PARA EFECTO GLASS AL ABRIR MENU HAMBURGUESA Y CARRITO -->
+
         <div class="overlay"></div>
       </nav>
     </header>
@@ -163,36 +165,36 @@
       </div>
       <div class="conteinerNosotros">
         <h2>Nuestro equipo de desarrolladores</h2>
-       <div class="conteinerDev">
-        <div class="nosotros">
-          <div class="conteinerIMG">
-            <img src="../assets/us.jpg" alt="img">
+        <div class="conteinerDev">
+          <div class="nosotros">
+            <div class="conteinerIMG">
+              <img src="../assets/us.jpg" alt="img" />
+            </div>
+            <h3>Marcos Molina</h3>
+            <p>FullStack Developer</p>
           </div>
-          <h3>Marcos Molina</h3>
-          <p>FullStack Developer</p>
-        </div>
-        <div class="nosotros">
-          <div class="conteinerIMG">
-            <img src="../assets/us.jpg" alt="img">
+          <div class="nosotros">
+            <div class="conteinerIMG">
+              <img src="../assets/us.jpg" alt="img" />
+            </div>
+            <h3>Leo Ezequiel Chalupp</h3>
+            <p>FullStack Developer</p>
           </div>
-          <h3>Leo Ezequiel Chalupp</h3>
-          <p>FullStack Developer</p>
-        </div>
-        <div class="nosotros">
-          <div class="conteinerIMG">
-            <img src="../assets/us.jpg" alt="img">
+          <div class="nosotros">
+            <div class="conteinerIMG">
+              <img src="../assets/us.jpg" alt="img" />
+            </div>
+            <h3>Maximiliano García Somorrostro</h3>
+            <p>FullStack Developer</p>
           </div>
-          <h3>Maximiliano García Somorrostro</h3>
-          <p>FullStack Developer</p>
-        </div>
-        <div class="nosotros">
-          <div class="conteinerIMG">
-            <img src="../assets/us.jpg" alt="img">
+          <div class="nosotros">
+            <div class="conteinerIMG">
+              <img src="../assets/us.jpg" alt="img" />
+            </div>
+            <h3>Jose Simon Diaz</h3>
+            <p>FullStack Developer</p>
           </div>
-          <h3>Jose Simon Diaz</h3>
-          <p>FullStack Developer</p>
         </div>
-       </div>
       </div>
     </main>
     <footer class="footer-section">
