--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
           <li><a href="./pages/sobreNosotros.html">Nosotros</a></li>
           <li><a href="#contactanos">Contactanos</a></li>
         </ul>
-        <!-- /*REEMPLAZAMOS LA IMAGEN POR EL ICONO DE FONT-AWESOME*/ -->
         <label for="cart-toggle" class="cart-label">
           <!-- <img src="./assets/img/cart-icon.svg" alt="Carrito de compras" class="cart-icon" />
            -->
@@ -118,7 +117,6 @@
             <a href="./pages/404.html">COMPRAR</a>
           </button>
         </div>
-        <!-- AGREGAMOS UN DIV VACIO DE CLASE OVERLAY PARA EFECTO GLASS AL ABRIR MENU HAMBURGUESA Y CARRITO -->
         <div class="overlay"></div>
       </nav>
     </header>
@@ -310,7 +308,7 @@
       <!-- Whyskys -->
       <section id="offers" class="">
         <div class="categori_title">
-          <h2>Nuestras Whyskys</h2>
+          <h2>Nuestros Whyskys</h2>
         </div>
         <div class="containerCard">
           <div class="card text-center">
