solucione problema con el footer

--- a/pages/login.html
+++ b/pages/login.html
@@ -52,7 +52,7 @@
           </div>
 
           <li><a href="../pages/sobreNosotros.html">Nosotros</a></li>
-          <li><a href="../pages/contactanos.html">Contactanos</a></li>
+          <li><a href="./contactos.html">Contactanos</a></li>
         </ul>
 
         <label for="cart-toggle" class="cart-label">
