--- a/pages/login.html
+++ b/pages/login.html
@@ -136,7 +136,7 @@
               <input
                 type="text"
                 name="txt"
-                placeholder="Nombre Completp"
+                placeholder="Nombre Completo"
                 required=""
               />
               <input
